platform/vault-secrets-operator/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vault-secrets-operator
  labels:
    pod-security.kubernetes.io/enforce: restricted
